--- a/test_scripts/SegmentationByClustering.ipynb
+++ b/test_scripts/SegmentationByClustering.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
     "fig, ax = plt.subplots(ncols = len(images), nrows=1, figsize = (12,12))\n",
     "\n",
     "for i, image in enumerate(images):\n",
-    "    ax[i].imshow(image, aspect='auto')\n",
+    "    ax[i].imshow(image, aspect='equal')\n",
     "    ax[i].set_axis_off()\n",
     "\n",
     "plt.tight_layout()\n",
@@ -193,6 +193,13 @@
     "plt.xticks(np.arange(2,6))\n",
     "plt.tight_layout()   \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Histogram Rating"
    ]
   },
   {
