--- a/test_scripts/functions.ipynb
+++ b/test_scripts/functions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +83,40 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def segment(image, bg_val=(255,255,255)):\n",
+    "    m = KMeans(n_clusters = 3)\n",
+    "    flattened_dims = (image.shape[0] * image.shape[1], image.shape[2])\n",
+    "    labels = m.fit_predict(image.reshape(flattened_dims)).reshape(image.shape[:2])\n",
+    "    \n",
+    "    # find the cluster closest to the color white\n",
+    "    bg_px_cluster = np.argmin(\n",
+    "                        np.sum(\n",
+    "                            np.subtract(bg_val, m.cluster_centers_),\n",
+    "                            axis=1\n",
+    "                        )\n",
+    "                    )\n",
+    "    \n",
+    "    # convert background pixels to black\n",
+    "    image[labels == bg_px_cluster] = [0,0,0]\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
    ]
   }
  ],
