Kernels kernels kernels

--- a/test_scripts/functions.ipynb
+++ b/test_scripts/functions.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def segment(image, bg_val=(255,255,255)):\n",
+    "def segment(image, bg_val=(255,255,255), return_filter=False):\n",
     "    m = KMeans(n_clusters = 3)\n",
     "    flattened_dims = (image.shape[0] * image.shape[1], image.shape[2])\n",
     "    labels = m.fit_predict(image.reshape(flattened_dims)).reshape(image.shape[:2])\n",
@@ -105,7 +105,12 @@
     "                    )\n",
     "    \n",
     "    # convert background pixels to black\n",
-    "    image[labels == bg_px_cluster] = [0,0,0]\n",
+    "    image[labels == bg_px_cluster, :] = [0,0,0]\n",
+    "    if return_filter:\n",
+    "        bin_filt = labels.copy()\n",
+    "        bin_filt[labels == bg_px_cluster] = 0\n",
+    "        bin_filt[labels != bg_px_cluster] = 1\n",
+    "        return image, bin_filt\n",
     "    return image"
    ]
   },
